# stado

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  HACKATHON.md  LICENSE  README.md  architecture.html  docker-compose.yml  entrypoint.sh  run.sh
alibaba/: README.md  deploy.sh
backend/: flights.json  pyproject.toml
backend/app/: ally_overlay.py  api.py  autotune.py  completion.py  config.py  coordination.py  flights.py  gcs_beacon.py  logbus.py  logs_api.py  main.py  onboard_track.py  pois.py  qwen.py  recorder.py  regions.py  report.py  safety.py  survey_vision.py  vehicle_lookup.py  vision_api.py  voice.py  voice_qwen.py
backend/app/mavlink/: commands.py  constants.py  jetson.py  link.py  missions.py  registry.py
backend/app/survey/: coordinated.py  planner.py
backend/app/vision/: bytetrack.yaml  follow.py  grounding.py  pipeline.py
backend/app/ws/: hub.py
backend/tests/: conftest.py  test_api_commands.py  test_api_ws_hub.py  test_autonomy_report.py  test_autotune.py  test_autotune_api.py  test_coordination.py  test_low_battery_alert.py  test_mavlink_commands.py  test_mavlink_link.py  test_mavlink_missions.py  test_mavlink_registry.py  test_max_altitude_ceiling.py  test_onboard_track.py  test_safety_gate.py  test_survey_demarcation.py  test_survey_planner.py  test_vision_geo.py  test_voice_dispatch.py  test_voice_qwen.py
experiments/: qwen_hello.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
nginx/: nginx.conf
relay/: go2rtc.yaml  mavrouter.py  run.sh  test-rtsp.sh
(+62 files in other folders)
